# failed-bank-dataset

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: labels.yaml
.github/ISSUE_TEMPLATE/: Ask.md  Data.Aquisition.md  Data.Create.md  Experiment.md  Explore.md  GitHub.Action.Issue.md  Model.md
.github/workflows/: cd.yml  ci.yml
notebooks/: bank_failures.ipynb
src/: METADATA_DESCRIPTION.md  api_utils.py  config.py  data_transform.py  dataset-metadata.json  fdic_datapipeline.py  file_ops.py  get_dataset_metadata.py  main.py
