[tool.poetry]
name = "fdic-failed-bank-dataset"
version = "0.1.0"
description = "Application that creates a kaggle dataset from FDIC public data for use in machine learning."
authors = ["Ron Mallory <ronnymallory@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.3"
types-requests = "^2.31.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
ipykernel = "^6.25.1"
missingno = "^0.5.2"
seaborn = "^0.12.2"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
